--- a/recurring-clean.html
+++ b/recurring-clean.html
@@ -85,7 +85,7 @@
     </header>
 
     <!-- OVERLAY MENU -->
-    <div id="menuOverlay" class="fixed inset-0 bg-blue-950 text-white flex flex-col items-center justify-center opacity-0 pointer-events-none transition-opacity duration-500 z-[9999] overflow-y-auto">
+    <div id="menuOverlay" class="fixed inset-0 bg-blue-950 text-white flex flex-col items-center justify-start opacity-0 pointer-events-none transition-opacity duration-200 z-[9999] overflow-y-auto">
         <!-- CLOSE BUTTON -->
         <button id="closeMenu" class="absolute top-6 right-8 text-white hover:text-blue-400 transition">
             <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -97,7 +97,6 @@
         <nav class="flex flex-wrap justify-center gap-12 text-3xl font-semibold tracking-wide mb-20 mt-8">
             <a href="index.html" class="hover:text-blue-400 transition">Home</a>
             <a href="about-us.html" class="hover:text-blue-400 transition">About Us</a>
-            <a href="blog.html" class="hover:text-blue-400 transition">Blogs</a>
             <a href="contact.html" class="hover:text-blue-400 transition">Contact Us</a>
         </nav>
 
@@ -110,7 +109,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.jpg" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -166,7 +165,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-constuction-cleaning.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -215,7 +214,7 @@
             
             <!-- LEFT SIDE: IMAGE -->
             <div class="md:w-1/2">
-                <img src="./images/recurring-clean.jpg" alt="Recurring Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                <img src="./images/recurring-services.jpg" alt="Recurring Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
             </div>
 
             <!-- RIGHT SIDE: TEXT -->
@@ -646,12 +645,6 @@
                             Book Now
                         </a>
                     </li>
-                    <li>
-                        <a href="blog.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
-                            <span class="material-icons text-blue-400 text-lg">rss_feed</span>
-                            Blog
-                        </a>
-                    </li>
                 </ul>
             </div>
 
@@ -704,18 +697,18 @@
     </footer>
 
     <script>
-        const menuBtn = document.querySelector('button'); // your menu button
+        const menuBtn = document.getElementById('menuButton');
         const menuOverlay = document.getElementById('menuOverlay');
         const closeMenu = document.getElementById('closeMenu');
 
         menuBtn.addEventListener('click', () => {
-        menuOverlay.classList.remove('opacity-0', 'pointer-events-none');
-        menuOverlay.classList.add('opacity-100');
+            menuOverlay.classList.remove('opacity-0', 'pointer-events-none');
+            menuOverlay.classList.add('opacity-100');
         });
 
         closeMenu.addEventListener('click', () => {
-        menuOverlay.classList.add('opacity-0', 'pointer-events-none');
-        menuOverlay.classList.remove('opacity-100');
+            menuOverlay.classList.add('opacity-0', 'pointer-events-none');
+            menuOverlay.classList.remove('opacity-100');
         });
     </script>
 
