Update for wiped repo

--- a/care-clean.html
+++ b/care-clean.html
@@ -734,7 +734,7 @@
                 </h2>
 
                 <!-- BUTTON -->
-                <a href="https://yourbookinglink.com" class="mt-2 w-full sm:w-auto">
+                <a href="contact.html" class="mt-2 w-full sm:w-auto">
                     <button class="flex items-center justify-center gap-2 bg-blue-600 text-white px-6 py-3 rounded-full font-medium shadow-md hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all duration-300 w-full sm:w-auto">
                         Book Now
                         <span class="material-icons text-white text-lg">arrow_forward</span>
@@ -784,7 +784,7 @@
                 <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Quick Links</h3>
                 <ul class="space-y-3 text-gray-300 text-center sm:text-left">
                     <li>
-                        <a href="about.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                        <a href="about-us.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">info</span>
                             About Us
                         </a>
