--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,142 @@
         </div>
     </div>
 
-    
+    <!-- FOOTER SECTION -->
+    <footer class="bg-blue-900 text-white py-16 px-6 md:px-16 lg:px-24 font-poppins">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-10">
+
+            <!-- COMPANY INFO -->
+            <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
+                <!-- LOGO -->
+                <img 
+                    src="./images/wiped-logo.png" 
+                    alt="Cleaning Service Icon" 
+                    class="w-36 h-20 mb-5 object-contain"
+                />
+
+                <!-- HEADING -->
+                <h2 class="text-2xl md:text-3xl font-semibold mb-4 text-white">
+                    Our Goal is to Wow You With Every Clean
+                </h2>
+
+                <!-- BUTTON -->
+                <a href="contact.html" class="mt-2 w-full sm:w-auto">
+                    <button class="flex items-center justify-center gap-2 bg-blue-600 text-white px-6 py-3 rounded-full font-medium shadow-md hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all duration-300 w-full sm:w-auto">
+                        Book Now
+                        <span class="material-icons text-white text-lg">arrow_forward</span>
+                    </button>
+                </a>
+            </div>
+
+            <!-- OUR SERVICES -->
+            <div>
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Our Services</h3>
+                <ul class="space-y-3 text-gray-300 text-center sm:text-left">
+                    <li>
+                        <a href="care-clean.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">home</span>
+                            Care Clean
+                        </a>
+                    </li>
+                    <li>
+                        <a href="deep-clean.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">cleaning_services</span>
+                            Deep Cleaning
+                        </a>
+                    </li>
+                    <li>
+                        <a href="recurring-clean.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">schedule</span>
+                            Recurring Clean
+                        </a>
+                    </li>
+                    <li>
+                        <a href="move-in-out.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">moving</span>
+                            Move In/Out Clean
+                        </a>
+                    </li>
+                    <li>
+                        <a href="post-construction.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">construction</span>
+                            Post Construction
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- QUICK LINKS -->
+            <div>
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Quick Links</h3>
+                <ul class="space-y-3 text-gray-300 text-center sm:text-left">
+                    <li>
+                        <a href="about-us.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">info</span>
+                            About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">call</span>
+                            Contact
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">arrow_forward</span>
+                            Book Now
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- CONTACT INFO + FOLLOW US -->
+            <div>
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Contact Info</h3>
+                <ul class="space-y-3 text-gray-300 mb-6 text-center sm:text-left">
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
+                        <span class="material-icons text-blue-400">call</span>
+                        <span>+1 (639) 382-1688</span>
+                    </li>
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
+                        <span class="material-icons text-blue-400">email</span>
+                        <span>admin@wipedcleaningsrvcs.com</span>
+                    </li>
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
+                        <span class="material-icons text-blue-400">location_on</span>
+                        <span>Regina, Saskatchewan, Canada</span>
+                    </li>
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
+                        <span class="material-icons text-blue-400">schedule</span>
+                        <span>
+                            Business Hours:
+                            <span class="block">Monday - Sunday, 9:00 AM - 6:00 PM</span>
+                        </span>
+                    </li>
+                </ul>
+
+                <!-- FOLLOW US -->
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Follow Us</h3>
+                <div class="flex justify-center sm:justify-start gap-4 text-2xl md:text-3xl">
+                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300">
+                        <span class="material-icons">facebook</span>
+                    </a>
+                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300">
+                        <span class="material-icons">photo_camera</span> <!-- Instagram -->
+                    </a>
+                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300">
+                        <span class="material-icons">public</span> <!-- X/Twitter -->
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- COPYRIGHT -->
+        <div class="border-t border-white mt-12 pt-6 text-center text-gray-400 text-sm">
+            © Copyright 2025. All Rights Reserved.
+        </div>
+    </footer>
 
 
     <script>
