Update for wiped repo

--- a/about-us.html
+++ b/about-us.html
@@ -181,19 +181,19 @@
         </div>
     </div>
 
-    <section class="relative pt-36 pb-20 bg-gradient-to-b from-white/50 via-white/70 to-white/50">
-        <!-- Overlay -->
-        <div class="absolute inset-0 bg-gradient-to-b from-white/50 via-white/70 to-white/50"></div>
-
+    <section class="relative pt-36 pb-20 bg-cover bg-center" style="background-image: url('./images/about.jpg');">
+        <!-- Optional Overlay -->
+        <div class="absolute inset-0 bg-blue-600 bg-opacity-50"></div> <!-- dark overlay, optional -->
+        
         <!-- Main Content -->
         <div class="relative z-10 max-w-3xl mx-auto flex flex-col items-center text-center px-6">
             <!-- Section Heading -->
-            <h2 class="text-4xl md:text-5xl font-extrabold mb-6 text-gray-900 animate-fadeInDown">
+            <h2 class="text-4xl md:text-5xl font-extrabold mb-6 text-white animate-fadeInDown">
                 About Us
             </h2>
 
             <!-- Description Paragraph (one sentence) -->
-            <p class="text-lg md:text-xl text-gray-800 mb-10 animate-fadeInUp">
+            <p class="text-lg md:text-xl text-gray-100 mb-10 animate-fadeInUp">
                 Wiped Cleaning Services is dedicated to making every space spotless, safe, and welcoming with our professional and reliable cleaning solutions.
             </p>
 
