--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
-            <button class="bg-blue-600 px-5 py-3 rounded-full flex items-center space-x-2 hover:bg-blue-700 transition">
-                <span class="text-lg font-medium">Book Now</span>
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M8 7V3M16 7V3M3 11h18M5 19h14a2 2 0 002-2V7H3v10a2 2 0 002 2z"/>
-                </svg>
-            </button>
+            <a href="contact.html">
+                <button class="bg-blue-600 px-5 py-3 rounded-full flex items-center space-x-2 hover:bg-blue-700 transition">
+                    <span class="text-lg font-medium">Book Now</span>
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8 7V3M16 7V3M3 11h18M5 19h14a2 2 0 002-2V7H3v10a2 2 0 002 2z"/>
+                    </svg>
+                </button>
+            </a>
         </div>
     </header>
 
@@ -199,7 +201,7 @@
             <p class="text-lg md:text-2xl mb-8 text-gray-300 animate-fadeInUp">
                 Every Detail
             </p>
-            <a href="#"
+            <a href="contact.html"
             class="inline-flex items-center gap-3 bg-blue-600 hover:bg-blue-700 text-white font-semibold px-8 py-4 rounded-full shadow-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-xl">
                 Book Now
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
