Update for wiped repo

--- a/move-in-out.html
+++ b/move-in-out.html
@@ -698,7 +698,7 @@
         </div>
     </section>
 
-    <section class="bg-gray-50 py-24 px-6 md:px-16 lg:px-24">
+    <section class="bg-white py-24 px-6 md:px-16 lg:px-24">
     <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
 
         <!-- Left Side: Text Content -->
@@ -730,7 +730,7 @@
 
         <!-- Right Side: Image -->
         <div class="flex justify-center md:justify-end">
-        <img src="your-image-path.jpg" alt="Cleaning Equipment" class="rounded-xl shadow-lg w-full max-w-md object-cover">
+        <img src="./images/cant-clean.png" alt="Cleaning Equipment" class="rounded-xl  w-full max-w-md object-cover">
         </div>
 
         </div>
