--- a/post-construction.html
+++ b/post-construction.html
@@ -362,7 +362,7 @@
                     </p>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="./images/post-construction.jpg" alt="Post-Construction Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                    <img src="./images/post-construction-clean.webp" alt="Post-Construction Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
                 </div>
             </div>
         </div>
