Update for wiped repo

--- a/care-clean.html
+++ b/care-clean.html
@@ -87,13 +87,15 @@
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
-            <button class="bg-blue-600 px-5 py-3 rounded-full flex items-center space-x-2 hover:bg-blue-700 transition">
-                <span class="text-lg font-medium">Book Now</span>
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M8 7V3M16 7V3M3 11h18M5 19h14a2 2 0 002-2V7H3v10a2 2 0 002 2z"/>
-                </svg>
-            </button>
+            <a href="contact.html">
+                <button class="bg-blue-600 px-5 py-3 rounded-full flex items-center space-x-2 hover:bg-blue-700 transition">
+                    <span class="text-lg font-medium">Book Now</span>
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8 7V3M16 7V3M3 11h18M5 19h14a2 2 0 002-2V7H3v10a2 2 0 002 2z"/>
+                    </svg>
+                </button>
+            </a>
         </div>
     </header>
 
